# c-srp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
include/: bignum_pair.h  bignum_utils.h  byte_array.h  csrp_error.h  group.h  hash_utils.h  srp.h  srp_client.h
src/: bignum_pair.c  bignum_utils.c  byte_array.c  group.c  hash_utils.c  srp.c  srp_client.c
